@@ -370,3 +370,9 @@
 	* Entry: Added edje_object_part_text_user_insert.
 	This function inserts text as if the user has inserted it.
 	This means it actually registers as a change and etc.
+
+2012-03-06  Mikael Sans (XHeLL)
+
+	* Entry: Added double click and triple click.
+	Double click selects a word.
+	Triple click selects a line.
